server tests adjusted and added